--- a/flower.html
+++ b/flower.html
@@ -12,10 +12,44 @@
     <audio src="sound/ChristianBasso&HaienQiu-Flowers.mp3" autoplay></audio>
     <div id="lyrics"></div>
     <h1 class="titulo">
-      Estas flores amarillas son un reflejo de la alegría que traes a mi vida.
+      Si cada suspiro llevara tu nombre
       <br />
       <br />
-      Gracias por iluminar mis días con tu presencia.
+      el viento nunca dejaría de hablar
+      <br />
+      <br />
+      pues en tu voz resuena el universo
+      <br />
+      <br />
+      y en tu risa danza la eternidad
+      <br />
+      <br />
+      <br />
+      <br />
+      No hay océano que abarque tu esencia
+      <br />
+      <br />
+      ni cielo que encierre tu fulgor
+      <br />
+      <br />
+      eres el faro en mi noche callada
+      <br />
+      <br />
+      el sol que despierta mi corazón
+      <br />
+      <br />
+      <br />
+      <br />
+      Si el tiempo pudiera medir este amor
+      <br />
+      <br />
+      los siglos serían un solo instante
+      <br />
+      <br />
+      porque amarte trasciende los límites
+      <br />
+      <br />
+      más allá de lo inmenso del universo
     </h1>
 
     <div class="night"></div>
